--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ strong {
   font-weight: 700; }
 
 h1, h2 {
-  ont-family: 'Merriweather', serif;
+  font-family: 'Merriweather', serif;
   font-weight: 300; }
 
 section {
